--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-export WANDB_API_KEY=
-export WANDB_ENTITY=
-export WANDB_PROJECT=
+# This variables cannot be empty even if you are not planning to use wandb
+export WANDB_API_KEY=YOUR_KEY_HERE
+export WANDB_ENTITY=YOUR_ENTITY_HERE
+export WANDB_PROJECT=YOUR_PROJECT_HERE
